// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacySelectableTextTest DoubleClickWhenNotSelectable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 2 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacySelectableTextTest DoubleClickWhenSelectable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacySelectableTextTest PressableWhenNotSelectable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacySelectableTextTest PressableWhenSelectable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;
